--- a/v2/how.html
+++ b/v2/how.html
@@ -20,7 +20,7 @@
 
     <div id="body-container" class="container">
         <div class="page-header">
-            <h4>How the Incidents Occurred? - Interpreting the Free Text Reports</h4>
+            <h4>How the Incidents Occurred? - Interpreting the Free Text Reports1111</h4>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -29,7 +29,7 @@
                         In this exploration we want to analyze the free text summary written for each incident. For the process of finding report similarity, we first used the TF-IDF and Cosine Similarity algorithms to find similarity between all the incident reports. Then for our analysis we consider two reports to be similar only if their threshold is 50% or higher.
 
                         To gather important words across report clusters, we first find the three most important words in each of the reports. This was found using TF-IDF (Term Frequency, Inverse Document Frequency) scores. Then for each cluster of nodes we gather all the important words from each node and take the top three scored word. The font size of the words is determined by the frequency of occurrence in the cluster.
- 
+
 
                     </p>
                     <p>
