--- a/v2/what.html
+++ b/v2/what.html
@@ -42,6 +42,11 @@
                 <p>
                     Find out more about how these incidents occured by going to the next page.
                 </p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <a href="how.html" class="btn btn-primary" >Continue to Incident Analysis <i class="fa fa-play" aria-hidden="true"></i></a>
             </div>
         </div>
@@ -57,43 +62,44 @@
         </div>
     </div>
     <div class="row-spacer"></div>
-    <div class="row">
-        <div class="col-md-8">
-            <div class="row">
-                <label><strong>View:</strong></label>
+    <div class="sankey-vis-container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="row">
+                    <label><strong>View:</strong></label>
+                </div>
+                <div class="form-group">
+                    <label class="radio-inline"><input type="radio" name="reporttype" value="byType" checked>Casualties by Incident Type</label>
+                    <label class="radio-inline"><input type="radio" name="reporttype" value="byTypeAndOutcome">Incidents by Type and Outcome</label>
+                </div>
             </div>
-            <div class="form-group">
-                <label class="radio-inline"><input type="radio" name="reporttype" value="byType" checked>Casualties by Incident Type</label>
-                <label class="radio-inline"><input type="radio" name="reporttype" value="byTypeAndOutcome">Incidents by Type and Outcome</label>
+            <div class="col-md-4">
+                <div id="text-timeline-title">
+                </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div id="text-timeline-title">
-
+        <div class="row">
+            <div class="col-md-8">
+                <div id="sankeyVis"></div>
+            </div>
+         <div class="col-md-4">
+             <section id="text-timeline" class="cd-container">
+                </section>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-8">
-            <div id="sankeyVis"></div>
-        </div>
-        <div class="col-md-4">
-            <section id="text-timeline" class="cd-container">
-            </section>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <section id="text-timeline1" class="cd-container">
-            </section>
-        </div>
-        <div class="col-md-4">
-            <section id="text-timeline2" class="cd-container">
-            </section>
-        </div>
-        <div class="col-md-4">
-            <section id="text-timeline3" class="cd-container">
-            </section>
+        <div class="row">
+            <div class="col-md-4">
+                <section id="text-timeline1" class="cd-container">
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section id="text-timeline2" class="cd-container">
+                </section>
+            </div>
+         <div class="col-md-4">
+                <section id="text-timeline3" class="cd-container">
+                </section>
+            </div>
         </div>
     </div>
 
