--- a/v2/index.html
+++ b/v2/index.html
@@ -73,7 +73,7 @@
         <div class="row-spacer"></div>
         <div class="row">
             <div class="col-md-3">
-                <a href="where.html">
+                <a href="map.html">
                     <div class="panel panel-info">
                         <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
                         <div class="panel-body" style="background: url('img/where.png') no-repeat !important;height: 250px">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="where.html">
+                <a href="map.html">
                     <div class="panel panel-info">
                         <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
                         <div class="panel-body" style="background: url('img/where2.png') no-repeat !important;height: 250px">
