--- a/what.html
+++ b/what.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NATO - Ukraine IED Incidents</title>
+    <title>Ukraine IED Incidents</title>
 
     <!-- Load CSS libraries -->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
