--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <br>
                             </p>
                         </div>
-                        <div id="countsVis" class="img-responsive"></div>
+                        <div id="countsVis"></div>
                     </div>
                 </div>
 
@@ -64,7 +64,7 @@
                                 The following shows all incidents from January 2014 to December 2015.
                             </p>
                         </div>
-                        <div id="timelineVis" class="img-responsive"></div>
+                        <div id="timelineVis" ></div>
                     </div>
                 </div>
 
