--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="col-md-6">
                 <div class="panel panel-info">
-                    <div class="panel-body">
+                    <div class="panel-body index-box">
                         <div class="text-left">
                             <p>
                                 We will analyse the various incidents that occurred between January 2014 to December 2015.
@@ -58,7 +58,7 @@
             </div>
             <div class="col-md-6">
                 <div class="panel panel-info">
-                    <div class="panel-body">
+                    <div class="panel-body index-box">
                         <div class="text-left">
                             <p>
                                 The following shows all incidents from January 2014 to December 2015.
