--- a/what.html
+++ b/what.html
@@ -60,9 +60,6 @@
     <div class="sankey-vis-container">
         <div class="row">
             <div class="col-md-8">
-                <div class="row">
-                    <label><strong>View:</strong></label>
-                </div>
                 <div class="form-group">
                     <label class="radio-inline"><input type="radio" name="reporttype" value="byType" checked>Casualties by Incident Type</label>
                     <label class="radio-inline"><input type="radio" name="reporttype" value="byTypeAndOutcome">Incidents by Type and Outcome</label>
@@ -75,6 +72,7 @@
         </div>
         <div class="row">
             <div class="col-md-8">
+                <span class="text-vis-notes"><small>Mouse over the edges or nodes to show more details about the respective incidents.</small></span>
                 <div id="sankeyVis"></div>
             </div>
          <div class="col-md-4">
