--- a/how.html
+++ b/how.html
@@ -44,10 +44,10 @@
         <div class="row-spacer"></div>
         <div class="row">
             <div class="col-md-8">
-                <div id="timelineVis" class="img-responsive"></div>
+                <div id="timelineVis"></div>
             </div>
             <div class="col-md-4">
-                <div id="countsVis" class="img-responsive"></div>
+                <div id="countsVis"></div>
             </div>
         </div>
         <div class="row-spacer"></div>
@@ -95,15 +95,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-3">
-
-            </div>
-        </div>
-
-
-
 
     </div>
 
